--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
             <div class ="col-sm-6 col-md-3 feature">
               
-               <img src="images/noun_419409_cc.svg"  width="48px">
+               <img src="Images/noun_419409_cc.svg"  width="48px">
                 <p id= 'bio'>@lpc.shop vous permet d'acheter des items Supreme / Sneakers chaques semaines</p>
             </div>
 
