--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-#<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -98,7 +98,7 @@
 
             <div class ="col-sm-6 col-md-3 feature">
               
-               <img src="Images/noun_419409_cc.svg"  width="48px">
+               <img src="images/noun_419409_cc.svg"  width="48px">
                 <p id= 'bio'>@lpc.shop vous permet d'acheter des items Supreme / Sneakers chaques semaines</p>
             </div>
 
@@ -149,4 +149,3 @@
   </body>
 </html>
   </head>
-  
