--- a/index.html
+++ b/index.html
@@ -80,25 +80,25 @@
 
             <div class =" col-sm-6 col-md-3 feature">
                
-               <img src="Images/noun_235904_cc.svg"  width="48px">
+               <img src="Images/site/noun_235904_cc.svg"  width="48px">
                <p id= 'bio'>@lpc.shop vous permet de connaître les différentes releases et évènements autour de la sneaker</p>
             </div>
 
             <div class =" col-sm-6 col-md-3 feature">
 
-                <img src="Images/noun_19517.svg"  width="48px" id ="un">
+                <img src="Images/site/noun_19517.svg"  width="48px" id ="un">
                  <p id= 'bio'>@lpc.shop vous permet de connaître les différents drops Supreme</p>
             </div>
 
             <div class =" col-sm-6 col-md-3 feature">
 
-               <img src="Images/noun_676775_cc.svg"  width="48px">
+               <img src="Images/site/noun_676775_cc.svg"  width="48px">
                 <p id= 'bio'>@lpc.shop vous permet de connaître les items à Cop / Drop chaques semaines</p>
             </div>
 
             <div class ="col-sm-6 col-md-3 feature">
               
-               <img src="Images/noun_419409_cc.svg"  width="48px">
+               <img src="Images/site/noun_419409_cc.svg"  width="48px">
                 <p id= 'bio'>@lpc.shop vous permet d'acheter des items Supreme / Sneakers chaques semaines</p>
             </div>
 
