--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+      <meta property="og:title" content="Lpc.shop" />
+      <meta property="og:type" content="article" />
+      <meta property="og:url" content="https://kelupie.github.io/lpc.shop-github-pages/" />
+      <meta property="og:image" content="/Codage/lpc.shop-github-pages/Images/lpc.shop.png" />
+      <meta property="og:description" content="Lpc.shop est la page française de ressel. Venez découvrir les derniers items hype de Supreme. Les dernières sneakers tendance du moment." />
+      <meta property="og:site_name" content="Lpc.shop" />
+      <meta property="fb:admins" content="Facebook numeric ID" />
+
+
+
+
+
     <title>Lpc.shop la page française de resell</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -20,6 +32,17 @@
     <![endif]-->
   </head>
   <body> 
+
+
+
+
+
+
+
+
+
+
+
 
 
     <nav class="navbar navbar-default navbar-fixed-top navbar-transparent">
