--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <meta property="og:title" content="Lpc.shop" />
       <meta property="og:type" content="article" />
       <meta property="og:url" content="https://kelupie.github.io/lpc.shop-github-pages/" />
-      <meta property="og:image" content=" https://content.nike.com/content/dam/content-api/SNKRS_2-0/season-2016-HO/NOVEMBER/JORDAN/854262-106/854262_106_Lead_Des.jpg"/>
+      <meta property="og:image" content=" https://kelupie.github.io/lpc.shop-github-pages/../Images/lpc.shop.png"/>
       <meta property="og:description" content="Lpc.shop est la page française de ressel. Venez découvrir les derniers items hype de Supreme. Les dernières sneakers tendance du moment." />
       <meta property="og:site_name" content="Lpc.shop" />
       <meta property="fb:admins" content="Facebook numeric ID" />
