--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
         <i class="fa fa-truck"></i> Woldwilde Shipping
       </p>
       <p>
-        <i class="fa fa-envelope-square"></i> lpcxshop@gmail.com
+        <i class="fa fa-envelope-square"></i> contact@lpcshop.fr
       </p>
     
 
