--- a/informations.html
+++ b/informations.html
@@ -141,7 +141,7 @@
             <div class =" col-sm-6 col-md-3 feature">
               <div class="list-group">
 
-               <a href="sneakers.html" class="list-group-item ">
+               <a href="shoes.html" class="list-group-item ">
                <img class=" list-group-item-picture " src="Images/site/noun_235904_cc.svg"  width="48px">
                <p class=" list-group-item-text " id= 'bio'>@lpc.shop vous permet de connaître les différentes releases sneakers</p>
                </a>
