--- a/lacoste.html
+++ b/lacoste.html
@@ -159,15 +159,15 @@
   <select size="1" onChange="location = this.options[this.selectedIndex].value;"> 
     <OPTION SELECTED VALUE="">- CHOOSE YOUR COLLABORATIONS -</option> 
       <optgroup label="View All">
-    <option value="shop.html" >Collaborations - No-Collaborations - Sneakers - Accesorries </option> 
+    <option value="shop.html" >Collaborations - No-Collaborations - Sneakers & Clothes - Accesorries </option> 
     <optgroup label="Collaborations">
     <option value="foxracing.html" >Supreme x Fox Racing</option> 
     <option value="lacoste.html" >Supreme x Lacoste</option> 
     <option value="tnf.html" >Supreme x TNF</option>
     <optgroup label="No-Collaborations">
     <option value="noncolab.html" >Supreme SS18</option> 
-    <optgroup label="Sneakers (Nike/Off white/Adidas)">
-    <option value="sneakers.html" >Sneakers</option> 
+    <optgroup label="Sneakers / Clothes (Nike/Off white/Adidas)">
+    <option value="sneakers.html" >Sneakers & Clothes</option> 
     <optgroup label="Accesorries">
     <option value="accessoires.html" >Supreme Accessories</option> 
   </select> 
@@ -176,6 +176,10 @@
   </div>
 </div>
 <div class="spacer1"></div>
+
+
+
+
 
 
 
@@ -678,7 +682,7 @@
             <div class =" col-sm-6 col-md-3 feature">
               <div class="list-group">
 
-               <a href="sneakers.html" class="list-group-item ">
+               <a href="shoes.html" class="list-group-item ">
                <img class=" list-group-item-picture " src="Images/site/noun_235904_cc.svg"  width="48px">
                <p class=" list-group-item-text " id= 'bio'>@lpc.shop vous permet de connaître les différentes releases sneakers</p>
                </a>
