--- a/contact.html
+++ b/contact.html
@@ -148,32 +148,16 @@
 
 
 <div id="footer">
-  <div class="container">
+  <div class ="container text-center">
     <div class="row">
 
-      <div class="col-xs-6">
-        <h3> Suivez - nous / Follow us</h3>
-        <ul class="list-inline social">
-          <li>
-              <a target="_blank" href="http://www.instagram.com/lpc.shop"><i class="fa fa-instagram"></i>Instagram</a>
-          </li>
-
-          <li> 
-            <a target="_blank" href="https://sobump.com/"><i class="fa fa-bullseye"></i>Bump</a>
-          </li>
-
-          <li> 
-            <a target="_blank" href="http://www.vinted.fr/membres/15414601-lpcshop"><i class="fa fa-bullseye"></i>Vinted</a>
-          </li>
-
-          <li> 
-            <a target="_blank" href="https://www.depop.com/lpc_shop"><i class="fa fa-bullseye"></i>Depop</a>
-          </li>
-        </ul>
-      </div>
+   
       
-      <div class="col-xs-6" id ="deux">
-        <p>Lpc.shop est la page de ressel où vous pouvez retrouver les informations sur les releases de sneakers et bien entendu des items Supreme disponibles sur nos réseaux sociaux comme instagram : <a href="http://www.instagram.com/lpc.shop">Lpc.shop</a>
+      <div id ="deux">
+        <p> - Lpc.shop est la page de Dépot / Vente  - Vous pouvez retrouver les informations sur les releases de sneakers - Nous envoyez vos recherches de vêtements ou de sneakers -
+          <div class="spacer2"></div>
+          <a href="http://www.lpcshop.fr/mentionlegale.html" target="_blank" rel="noopener noreferrer"> - Mentions légales - </a>
+        
         </p>
 
       </div>
@@ -182,12 +166,6 @@
    </div> 
   </div>
 </div>
-
-
-
-
-
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
