--- a/shop.html
+++ b/shop.html
@@ -4311,7 +4311,7 @@
       </table>
       <div class="spacer2"></div>
       <input type="hidden" name="currency_code" value="EUR">
-      <input type="image" src="https://www.paypalobjects.com/fr_FR/FR/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
+      <input type="image" src="Images/ajout1.png" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
       <img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1" height="1">
       </form>
 
