--- a/accessoires.html
+++ b/accessoires.html
@@ -277,7 +277,7 @@
       </table>
       <div class="spacer2"></div>
       <input type="hidden" name="currency_code" value="EUR">
-      <input type="image" src="https://www.paypalobjects.com/fr_FR/FR/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
+      <input type="image" src="Images/ajout1.png" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
       <img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1" height="1">
       </form>
 
@@ -345,7 +345,7 @@
         </table>
         <div class="spacer2"></div>
         <input type="hidden" name="currency_code" value="EUR">
-        <input type="image" src="https://www.paypalobjects.com/fr_FR/FR/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
+        <input type="image" src="Images/ajout1.png" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
         <img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1" height="1">
         </form>
 
@@ -422,7 +422,7 @@
       </table>
       <div class="spacer2"></div>
       <input type="hidden" name="currency_code" value="EUR">
-      <input type="image" src="https://www.paypalobjects.com/fr_FR/FR/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
+      <input type="image" src="Images/ajout1.png" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
       <img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1" height="1">
       </form>
 
@@ -491,7 +491,7 @@
       </table>
       <div class="spacer2"></div>
       <input type="hidden" name="currency_code" value="EUR">
-      <input type="image" src="https://www.paypalobjects.com/fr_FR/FR/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
+      <input type="image" src="Images/ajout1.png" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
       <img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1" height="1">
       </form>
 
@@ -557,7 +557,7 @@
         </table>
         <div class="spacer2"></div>
         <input type="hidden" name="currency_code" value="EUR">
-        <input type="image" src="https://www.paypalobjects.com/fr_FR/FR/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
+        <input type="image" src="Images/ajout1.png" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
         <img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1" height="1">
         </form>
 
@@ -627,7 +627,7 @@
         </table>
         <div class="spacer2"></div>
         <input type="hidden" name="currency_code" value="EUR">
-        <input type="image" src="https://www.paypalobjects.com/fr_FR/FR/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
+        <input type="image" src="Images/ajout1.png" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
         <img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1" height="1">
         </form>
 
@@ -693,7 +693,7 @@
       </table>
       <div class="spacer2"></div>
       <input type="hidden" name="currency_code" value="EUR">
-      <input type="image" src="https://www.paypalobjects.com/fr_FR/FR/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
+      <input type="image" src="Images/ajout1.png" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
       <img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1" height="1">
       </form>
 
@@ -760,7 +760,7 @@
         </table>
         <div class="spacer2"></div>
         <input type="hidden" name="currency_code" value="EUR">
-        <input type="image" src="https://www.paypalobjects.com/fr_FR/FR/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
+        <input type="image" src="Images/ajout1.png" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
         <img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1" height="1">
         </form>
 
@@ -826,7 +826,7 @@
         </table>
         <div class="spacer2"></div>
         <input type="hidden" name="currency_code" value="EUR">
-        <input type="image" src="https://www.paypalobjects.com/fr_FR/FR/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
+        <input type="image" src="Images/ajout1.png" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
         <img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1" height="1">
         </form>
 
@@ -893,7 +893,7 @@
         </table>
         <div class="spacer2"></div>
         <input type="hidden" name="currency_code" value="EUR">
-        <input type="image" src="https://www.paypalobjects.com/fr_FR/FR/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
+        <input type="image" src="Images/ajout1.png" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
         <img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1" height="1">
         </form>
 
@@ -963,7 +963,7 @@
         </table>
         <div class="spacer2"></div>
         <input type="hidden" name="currency_code" value="EUR">
-        <input type="image" src="https://www.paypalobjects.com/fr_FR/FR/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
+        <input type="image" src="Images/ajout1.png" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
         <img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1" height="1">
         </form>
 
