--- a/foxracing.html
+++ b/foxracing.html
@@ -270,7 +270,7 @@
 
                   
           <input type="hidden" name="currency_code" value="EUR">
-          <input type="image" src="https://www.paypalobjects.com/fr_FR/FR/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
+          <input type="image" src="Images/ajout1.png" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
           <img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1" height="1">
           </form>
 
@@ -345,7 +345,7 @@
               </table>
               <div class="spacer2"></div>
               <input type="hidden" name="currency_code" value="EUR">
-              <input type="image" src="https://www.paypalobjects.com/fr_FR/FR/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
+              <input type="image" src="Images/ajout1.png" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
               <img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1" height="1">
               </form>
 
@@ -412,7 +412,7 @@
                   </table>
                   <div class="spacer2"></div>
                   <input type="hidden" name="currency_code" value="EUR">
-                  <input type="image" src="https://www.paypalobjects.com/fr_FR/FR/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
+                  <input type="image" src="Images/ajout1.png"border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
                   <img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1" height="1">
                   </form>
 
@@ -483,7 +483,7 @@
             </table>
             <div class="spacer2"></div>
             <input type="hidden" name="currency_code" value="EUR">
-            <input type="image" src="https://www.paypalobjects.com/fr_FR/FR/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
+            <input type="image" src="Images/ajout1.png" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
             <img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1" height="1">
             </form>
 
@@ -555,7 +555,7 @@
             </table>
             <div class="spacer2"></div>
             <input type="hidden" name="currency_code" value="EUR">
-            <input type="image" src="https://www.paypalobjects.com/fr_FR/FR/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
+            <input type="image" src="Images/ajout1.png" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
             <img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1" height="1">
             </form>
 
@@ -624,7 +624,7 @@
                 </table>
                 <div class="spacer2"></div>
                 <input type="hidden" name="currency_code" value="EUR">
-                <input type="image" src="https://www.paypalobjects.com/fr_FR/FR/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
+                <input type="image" src="Images/ajout1.png" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
                 <img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1" height="1">
                 </form>
 
