--- a/mentionlegale.html
+++ b/mentionlegale.html
@@ -94,7 +94,7 @@
 <p class="p1">Nous acceptons différents moyens de paiement :<br>- PAYPAL <br>- ESPÈCE (Uniquement en remise main propre et selon la commande).<br><br>Cependant, nous n'acceptons pas les chèques et les autres moyens de paiement.<br><span class="s1"></span></p>
 <p class="p1"> </p>
 <p class="p1"><strong>3- COMMENT ANNULER UNE COMMANDE OU UN ARTICLE ?</strong></p>
-<p class="p1">Vous vous êtes trompé sur une commande ? Vous voulez changer d'article ? Pas de souci ! Envoyez un message à notre service client contact@shopheat.com ou contactez-nous sur Instagram et nous traiterons votre demande sous 72 heures.</p>
+<p class="p1">Vous vous êtes trompé sur une commande ? Vous voulez changer d'article ? Pas de souci ! Envoyez un message à notre service client lpcxshop@gmail.com ou contactez-nous sur Instagram et nous traiterons votre demande sous 72 heures.</p>
 <p class="p1">Si votre colis est déjà envoyé, suivez les indications dans la section Retours et Échanges.</p>
 <p class="p1"> </p>
 <p class="p1"><strong>4- UN ARTICLE VOUS INTERESSE MAIS N'EST PLUS DISPONIBLE ?</strong></p>
