--- a/shop.html
+++ b/shop.html
@@ -4151,7 +4151,7 @@
    
       
       <div id ="deux">
-        <p> - Lpc.shop est la page de Dépot / Vente  - Vous pouvez retrouver les informations sur les releases de sneakers - Nous envoyez vos recherches de vêtements ou de sneakers -
+        <p> - Lpc.shop est la page française de Dépot / Vente  de vêtements Hype  - Vous retrouver les informations sur les sorties des plus grandes marques streetwear - Envoyez-nous vos recherches vêtements / sneakers -
           <div class="spacer2"></div>
           <a href="http://www.lpcshop.fr/mentionlegale.html" target="_blank" rel="noopener noreferrer"> - Mentions légales - </a>
         
