--- a/commandes.html
+++ b/commandes.html
@@ -135,7 +135,7 @@
         </div>
          </div>
         <div class ="container text-center">
-        <h8> - Recevez par mail votre facture et les informations de la livraison éditée par l'équipe Lpc.shop -  </h8>
+        <h8> - Vous allez recevoir dans la journée votre facture à votre adresse e-mail et les informations de la livraison éditée par l'équipe Lpc.shop -  </h8>
          </div>
         <div class="spacer-bande1"></div>
         
