--- a/shop.html
+++ b/shop.html
@@ -3902,7 +3902,7 @@
         
         <div class="btn-group">
         </div>
-      <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
 <input type="hidden" name="cmd" value="_s-xclick">
 <input type="hidden" name="hosted_button_id" value="GKTAHKSELN82S">
 <table>
@@ -3917,9 +3917,13 @@
 </table>
 <div class="spacer2"></div>
 <input type="hidden" name="currency_code" value="EUR">
-<input type="image" src="Images/ajout1.png" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
+<input type="image" src="https://www.paypalobjects.com/fr_FR/FR/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
 <img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1" height="1">
 </form>
+
+
+
+
 
 
 
