--- a/shop.html
+++ b/shop.html
@@ -3928,6 +3928,8 @@
 
 
 
+
+
       </div>
     </div>
   </div>
@@ -4094,7 +4096,7 @@
         <p> - Lpc.shop est la page française de Dépot / Vente  de vêtements Hype  - Vous retrouver les informations sur les sorties des plus grandes marques streetwear - Envoyez-nous vos recherches vêtements / sneakers -
           <div class="spacer2"></div>
           <a href="http://www.lpcshop.fr/mentionlegale.html" target="_blank" rel="noopener noreferrer"> - Mentions légales - </a>
-          <a href="http://www.lpcshop.fr/commandes.html" target="_blank" rel="noopener noreferrer"> -  Historique de commande - </a>
+          <a href="http://www.lpcshop.fr/commandes.html" target="_blank" rel="noopener noreferrer">   Historique de commande - </a>
         </p>
 
       </div>
