--- a/shop.html
+++ b/shop.html
@@ -3907,7 +3907,7 @@
 <input type="hidden" name="hosted_button_id" value="GKTAHKSELN82S">
 <table>
 <tr><td><input type="hidden" name="on0" value="Livraison / Shipping">Livraison / Shipping</td></tr><tr><td><select name="os0">
-  <option value="(France) -">(France) - €1,00 EUR</option>
+  <option value="(France) -">(France) - €350,00 EUR</option>
   <option value="(Europe) -">(Europe) - €360,00 EUR</option>
   <option value="(Out of Europe) -">(Out of Europe) - €380,00 EUR</option>
 </select> </td></tr>
@@ -3915,10 +3915,15 @@
   <option value="Parra - (Small)">Parra - (Small) </option>
 </select> </td></tr>
 </table>
+<div class="spacer2"></div>
 <input type="hidden" name="currency_code" value="EUR">
-<input type="image" src="https://www.paypalobjects.com/fr_FR/FR/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
+<input type="image" src="Images/ajout1.png" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
 <img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1" height="1">
 </form>
+
+
+
+
 
 
 
