--- a/panier.html
+++ b/panier.html
@@ -377,6 +377,7 @@
       <div class="col-xs-6" id ="deux">
         <p>Lpc.shop est la page de ressel où vous pouvez retrouver les informations sur les releases de sneakers<a href="http://www.instagram.com/lpc.shop">Lpc.shop</a>
         </p>
+        <a href="http://www.lpcshop.fr/commandes.html" target="_blank" rel="noopener noreferrer">   Historique de commande - </a>
 
       </div>
     
