--- a/noncolab.html
+++ b/noncolab.html
@@ -1608,8 +1608,9 @@
 
    
       
+       
       <div id ="deux">
-        <p> - Lpc.shop est la page française de Dépot / Vente  de vêtements Hype  - Vous retrouver les informations sur les sorties des plus grandes marques streetwear - Envoyez-nous vos recherches vêtements / sneakers -
+        <p> - Lpc.shop est la page française de Dépot / Vente  de vêtements Hype  - Trouvez les informations sur les sorties des plus grandes marques streetwear - Envoyez-nous vos recherches vêtements / sneakers -
           <div class="spacer2"></div>
           <a href="http://www.lpcshop.fr/mentionlegale.html" target="_blank" rel="noopener noreferrer"> - Mentions légales - </a>
           <a href="http://www.lpcshop.fr/commandes.html" target="_blank" rel="noopener noreferrer">   Historique de commande - </a>
