--- a/contact.html
+++ b/contact.html
@@ -159,6 +159,8 @@
           <div class="spacer2"></div>
           <a href="http://www.lpcshop.fr/mentionlegale.html" target="_blank" rel="noopener noreferrer"> - Mentions légales - </a>
           <a href="http://www.lpcshop.fr/commandes.html" target="_blank" rel="noopener noreferrer">   Historique de commande - </a>
+          <div class="spacer2"></div>
+          <h>© 2018 Lpcshop.fr</h>
         
         </p>
 
