--- a/shop.html
+++ b/shop.html
@@ -4315,12 +4315,37 @@
             </div>
             </div>
            
+           <div class =" col-sm-6 col-md-3 feature">
+              <div class="list-group">
+
+               <img src="Images/background/adidas.png" alt="Bande supreme"> 
+            </div>
+          </div>
+
+            <div class =" col-sm-6 col-md-3 feature">
+                 <div class="list-group">
+               <img src="Images/background/playboy.png" alt="Bande supreme"> 
+                </div>
+            </div>
+
+            <div class =" col-sm-6 col-md-3 feature">
+              <div class="list-group">
+                 <img src="Images/background/stone.png" alt="Bande supreme"> 
+            </div>
+            </div>
+
+            <div class ="col-sm-6 col-md-3 feature">
+               <div class="list-group">
+                <img src="Images/background/champion.png" alt="Bande supreme"> 
+            </div>
+            </div>
             <!--End mc_embed_signup-->
 
 <!--End mc_embed_signup-->
            </div>
          </div>
        </div>
+
 
         
  <div class="spacer"></div>
