--- a/tnf.html
+++ b/tnf.html
@@ -676,6 +676,7 @@
        </div>
 
 
+
 <div class ="vertical-spacer" ></div>
        <div class ="container" >
          <div class ="row" >
@@ -735,6 +736,30 @@
             </div>
             </div>
            
+           <div class =" col-sm-6 col-md-3 feature">
+              <div class="list-group">
+
+               <img src="Images/background/adidas.png" alt="Bande supreme"> 
+            </div>
+          </div>
+
+            <div class =" col-sm-6 col-md-3 feature">
+                 <div class="list-group">
+               <img src="Images/background/playboy.png" alt="Bande supreme"> 
+                </div>
+            </div>
+
+            <div class =" col-sm-6 col-md-3 feature">
+              <div class="list-group">
+                 <img src="Images/background/stone.png" alt="Bande supreme"> 
+            </div>
+            </div>
+
+            <div class ="col-sm-6 col-md-3 feature">
+               <div class="list-group">
+                <img src="Images/background/champion.png" alt="Bande supreme"> 
+            </div>
+            </div>
             <!--End mc_embed_signup-->
 
 <!--End mc_embed_signup-->
@@ -742,7 +767,6 @@
          </div>
        </div>
 
-        
  <div class="spacer"></div>
 
 
