--- a/panier.html
+++ b/panier.html
@@ -206,43 +206,61 @@
 
 
 
-
-
-
- <div class="spacer"></div>
-        <div class ="container text-center">
+      
+         <div class ="container  displayflex ">
+        <div class="text-center fullwidth">
           <div class ="row">
+
             <div class =" col-sm-6 col-md-3 feature">
-              <h6>  - SNEAKERS - </h6>
 
+              <div class="spacer"></div>
 
+              <div class="list-group">
+                <a href="shoes.html" class="list-group-item " >
+                    <font size=5><strong>SNEAKERS</strong></font>   
+               </a>
+              </div>
               </div>
            
 
 
 
             <div class =" col-sm-6 col-md-3 feature ">
-              <h6>   - DROPS -    </h6>
-
+              <div class="spacer"></div>
+               <div class="list-group">
+                <a href="supreme.html" class="list-group-item " >
+                    <font size=5><strong>DROPS</strong></font>   
+               </a>
+              </div>
               </div>
 
 
               <div class =" col-sm-6 col-md-3 feature ">
-              <h6>    - CLOTHES -    </h6>
-
+                <div class="spacer"></div>
+              <div class="list-group">
+                <a href="informations.html" class="list-group-item " >
+                    <font size=5><strong>CLOTHES</strong></font>   
+               </a>
+              </div>
               </div>
 
 
               <div class =" col-sm-6 col-md-3 feature ">
-              <h6>   - WTS/WTB/WTT -    </h6>
-
+                <div class="spacer"></div>
+             <div class="list-group">
+                <a href="shop.html" class="list-group-item " >
+                    <font size=5><strong>BUY & SELL</strong></font>   
+               </a>
               </div>
-
+              </div>
 
 
 
             </div>
           </div>
+        </div>
+
+
 
 
 
