--- a/sneakers.html
+++ b/sneakers.html
@@ -161,7 +161,7 @@
         <div class="spacer1"></div>
 <form name="form" > 
   <select size="1" onChange="location = this.options[this.selectedIndex].value;"> 
-    <OPTION SELECTED VALUE="">- CHOOSE YOUR COLLABORATIONS -</option> 
+    <OPTION SELECTED VALUE="">CHOOSE YOUR COLLABORATIONS </option> 
       <optgroup label="View All">
     <option value="shop.html" >Collaborations - No-Collaborations - Sneakers & Clothes - Accesorries </option> 
     <optgroup label="Collaborations">
