--- a/sneakers.html
+++ b/sneakers.html
@@ -998,15 +998,26 @@
   <!-- Indicators -->
   <ol class="carousel-indicators">
     <li data-target="#monCarousel500" data-slide-to="0" class="active"></li>
+    <li data-target="#monCarousel500" data-slide-to="1" class="active"></li>
+    <li data-target="#monCarousel500" data-slide-to="2" class="active"></li>
   
     
   </ol>
 
-  <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
         <!-- image 1 -->
-    <img src="Images/site/SNEAKER/yeezybutter.png" alt="...">
+    <img src="Images/site/SNEAKER/yeezybutter1.png" alt="...">
+
+    </div>
+     <div class="item">
+        <!-- image 2 -->
+    <img src="Images/site/SNEAKER/yeezybutter2.png" alt="...">
+
+    </div>
+    <div class="item">
+        <!-- image 2 -->
+    <img src="Images/site/SNEAKER/yeezybutter3.png" alt="...">
 
     </div>
     
