--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <meta property="og:description" content="Lpc.shop est la page française de Dépot / Vente  de vêtements Hypes  - Trouvez les informations sur les sorties des plus grandes marques streetwear - Envoyez-nous vos recherches vêtements / sneakers" />
       <meta property="og:site_name" content="Lpc.shop" />
       <meta property="fb:admins" content="Facebook numeric ID" />
-
+      <link ref ="stylesheet" type="text/css" media="screen" href="style.css" />
 
 
 
