--- a/mentionlegale.html
+++ b/mentionlegale.html
@@ -117,7 +117,7 @@
 
 
 <p class="p1"> </p>
-<p class="p1"><strong>3- VOTRE PRODUIT N'EST TOUJOURS PAR ARRIVÉ ?</strong></p>
+<p class="p1"><strong>3- VOTRE PRODUIT N'EST TOUJOURS PAS ARRIVÉ ?</strong></p>
 <p class="p1">Si votre produit n'est toujours pas en votre possession 7 jours après la confirmation de commande, contactez notre service client qui trouvera rapidement une solution.</p>
 <p class="p1"> </p>
 <p class="p1"><strong>4- POUVEZ-VOUS SUIVRE MA COMMANDE ?</strong></p>
