--- a/mentionlegaleanglais.html
+++ b/mentionlegaleanglais.html
@@ -76,81 +76,81 @@
   <div class="grid">
     <div class="grid__item medium-up--five-sixths medium-up--push-one-twelfth">
       <div class="section-header text-center">
-        <h1>Foires Aux Questions (F.A.Q)</h1>
+        <h1> Frequently Asked Questions (F.A.Q)</h1>
       </div>
 
       <div class="rte">
         <meta charset="utf-8">
         <div class ="container text-center">
-<p class="p1"><span class="s1">﻿Voici une série de question fréquente que les utilisateurs nous demande par e-mail. Si votre question ne se situe pas ici ou que vous souhaitez plus d'informations, n'hésitez pas à <a href="http://www.lpcshop.fr/contact.html" target="_blank" rel="noopener noreferrer">nous contacter</a> par e-mail.</span></p>
+<p class="p1"><span class="s1">﻿Here is a series of frequent questions that users ask us by e-mail. If your question is not located here or if you want more information, do not hesitate to<a href="http://www.lpcshop.fr/contactanglais.html" target="_blank" rel="noopener noreferrer">contact us</a> by e-mail.</span></p>
  
 <img alt="Brand" src="Images/site/logo3.png">
-<h2 class="p1"><strong><span class="s1">COMMANDE</span></strong></h2>
+<h2 class="p1"><strong><span class="s1">ORDER</span></strong></h2>
 <div class="spacer2"></div>
-<p class="p1"><strong><span class="s1">1- DOIS-JE COMMANDER SUR LE SITE ?</span></strong></p>
-<p class="p1"><span class="s1">Nous sommes un site marchand disponible en ligne uniquement. Vous ne pouvez donc que commander sur<span> lpcshop.fr, en message privé sur Instagram ou faire une commande par e-mail</span><span class="s2"> !<br></span>Vous n'avez pas besoin de vous déplacer pour avoir vos articles, nous nous chargeons de les livrer !</span></p>
+<p class="p1"><strong><span class="s1">1- SHOULD I ORDER ON THE SITE? </span></strong></p>
+<p class="p1"><span class="s1">We are a merchant site available online only. So you can only order on<span>  lpcshop.fr, in private message on Instagram or order by email</span><span class="s2"> !<br></span>You are not you do not need to travel to get your items, we will deliver them! </span></p>
 <p class="p1"> </p>
-<p class="p1"><strong>2- QUELLES FORMES DE PAIEMENT ACCEPTEZ-VOUS ?</strong></p>
-<p class="p1">Nous acceptons différents moyens de paiement :<br>- PAYPAL <br>- ESPÈCE (Uniquement en remise main propre et selon la commande).<br><br>Cependant, nous n'acceptons pas les chèques et les autres moyens de paiement.<br><span class="s1"></span></p>
+<p class="p1"><strong> 2- WHAT FORMS OF PAYMENT DO YOU ACCEPT?</strong></p>
+<p class="p1">We accept different payment methods:<br>- PAYPAL <br>- CASH (Only hand delivered and according to the order).<br><br>However, we do not accept checks and other means of payment.<br><span class="s1"></span></p>
 <p class="p1"> </p>
-<p class="p1"><strong>3- COMMENT ANNULER UNE COMMANDE OU UN ARTICLE ?</strong></p>
-<p class="p1">Vous vous êtes trompé sur une commande ? Vous voulez changer d'article ? Pas de souci ! Envoyez un message à notre service client lpcxshop@gmail.com ou contactez-nous sur Instagram et nous traiterons votre demande sous 72 heures.</p>
-<p class="p1">Si votre colis est déjà envoyé, suivez les indications dans la section Retours et Échanges.</p>
+<p class="p1"><strong>3- HOW TO CANCEL AN ORDER OR ARTICLE?</strong></p>
+<p class="p1"> Did you make a mistake on an order? Want to change item? No problem ! Send a message to our customer service lpcxshop@gmail.com or contact us on Instagram and we will process your request within 72 hours.</p>
+<p class="p1"> If your package has already been sent, follow the instructions in the Returns and Exchanges section.</p>
 <p class="p1"> </p>
-<p class="p1"><strong>4- UN ARTICLE VOUS INTERESSE MAIS N'EST PLUS DISPONIBLE ?</strong></p>
-<p class="p1">Malheureusement tous nos produits sont limités mais pas de panique, nous avons un service de conciergerie qui peut surement vous aider ! Pour cela, n'hésitez pas à nous contacter et faire votre demande par e-mail ou en message privé Instagram.</p>
+<p class="p1"><strong>4- AN ARTICLE INTERESTS YOU BUT IS NO LONGER AVAILABLE?</strong></p>
+<p class="p1">Unfortunately all our products are limited but no panic, we have a concierge service that can surely help you! For that, do not hesitate to contact us and make your request by e-mail or in private message Instagram.</p>
 <h2 class="p1"><strong><span class="s1"></span></strong></h2>
 <h2 class="p1"><strong><span class="s1"></span></strong></h2>
 
 <div class="spacer1"></div>
 
-<h2 class="p1"><strong><span class="s1">LIVRAISON</span></strong></h2>
+<h2 class="p1"><strong><span class="s1">DELIVERY</span></strong></h2>
 <div class="spacer2"></div>
-<p class="p1"><strong><span class="s1">1- DANS QUEL PAYS LIVREZ-VOUS ?</span></strong></p>
-<p class="p1"><span class="s1">Nous livrons dans toute la France et à l'international. Cependant, nous ne sommes en aucun cas responsable des taxes et des frais supplémentaire d'envois lié à la réception du colis dans votre pays. Si vous n'êtes pas en France ou en Europe, nous fixons le coût d'envoi à 30€ fixe.</span></p>
+<p class="p1"><strong><span class="s1">1- IN WHICH COUNTRY ARE YOU BOOKING?</span></strong></p>
+<p class="p1"><span class="s1">We deliver throughout France and internationally. However, we are in no way responsible for any taxes and additional shipping charges related to the receipt of the parcel in your country. If you are not in France or Europe, we set the shipping cost to 30 €.</span></p>
 <p class="p1"> </p>
-<p class="p1"><strong>2- DÉLAIS DE LIVRAISON.</strong></p>
-<p class="p1">Lpc.Shop propose plusieurs tarifs de livraison.</p>
-<p class="p1">Livraison standard** (2-3 jours à compter de la date d'envoi) coût fixe de 10€***.<br>Livraison en Europe (5-6 jours) <span>coût fixe de </span>20€***.</p>
+<p class="p1"><strong>2- DELIVERY TIMES.</strong></p>
+<p class="p1"> Lpc.Shop offers several shipping rates.</p>
+<p class="p1">Standard delivery ** (2-3 days from the date of dispatch) fixed cost of 10 €***.<br>Delivery in Europe (5-6 days) <span>fixed cost of  </span>20€***.</p>
 <meta charset="utf-8">
-<p class="p1"><em>*Les prix énoncés sont à titre indicatif. Il se peut, selon la taille et le poids de votre colis, que le prix d'envoie soit différent.</em></p>
+<p class="p1"><em>* The prices listed are for information only. It may be, depending on the size and weight of your package, that the price of sending is different.</em></p>
 
 
 <p class="p1"> </p>
-<p class="p1"><strong>3- VOTRE PRODUIT N'EST TOUJOURS PAR ARRIVÉ ?</strong></p>
-<p class="p1">Si votre produit n'est toujours pas en votre possession 7 jours après la confirmation de commande, contactez notre service client qui trouvera rapidement une solution.</p>
+<p class="p1"><strong>3- IS YOUR PRODUCT STILL NOT ARRIVED?</strong></p>
+<p class="p1">If your product is still not in your possession 7 days after the order confirmation, contact our customer service who will quickly find a solution.</p>
 <p class="p1"> </p>
-<p class="p1"><strong>4- POUVEZ-VOUS SUIVRE MA COMMANDE ?</strong></p>
-<p class="p1">Bien évidemment ! Une fois votre colis envoyé, vous recevrez un email avec un numéro de suivis. Vous pourrez ensuite avoir un suivi complet de votre commande. </p>
+<p class="p1"><strong>4- CAN YOU FOLLOW MY ORDER?</strong></p>
+<p class="p1">Of course! Once your package has been sent, you will receive an email with a tracking number. You can then have a complete follow-up of your order.  </p>
 <p class="p1"> </p>
 <h2 class="p1"><strong><span class="s1"></span></strong></h2>
 
 <div class="spacer1"></div>
-<h2 class="p1"><strong><span class="s1">RETOURS ET ÉCHANGES</span></strong></h2>
+<h2 class="p1"><strong><span class="s1">RETURNS AND EXCHANGES</span></strong></h2>
 <div class="spacer2"></div>
 
-<p class="p1">Si vous souhaitez effectuer un retour ou faire un échange, vous pouvez le faire sous 14 jours après réceptions du colis. </p>
+<p class="p1">If you want to make a return or exchange, you can do it within 14 days after receiving the package. </p>
 <div class="p1"></div>
-<div class="p1">Pour faire un retour ou un échange, veuillez nous contacter à :</div>
+<div class="p1"> To make a return or exchange, please contact us at:</div>
 <div class="p1">lpcxshop@gmail.com</div>
 <div class="p1"> </div>
-<p class="p1"><strong><span class="s1">1- JE VEUX ÉCHANGER UN PRODUIT, QUE FAIRE ?</span></strong></p>
-<p class="p1"><span class="s1">Si vous souhaitez échanger un produit, vous devrez nous le renvoyer (non-porté, non-nettoyé, dans sa boite d'origine) dans le <strong>même</strong> <strong>état</strong>.<br>Notez que le coût de l'envoi sera à votre charge.<br></span></p>
-<p class="p1"><span class="s1">Une fois le colis envoyé, patientez 5 à 7 jours pour la réception du colis chez Lpc.shop. Votre nouveau produit vous sera envoyé gratuitement sous 48h après la réception de l'objet.</span></p>
-<p class="p1"><span class="s1">S'il s'agit d'un remboursement, comptez 48h à 72h après réception du colis pour être re-crédité. Vous serez remboursé sur le même moyen de paiement.</span></p>
-<p class="p1"><em>*Les vêtements enfilés pour essayer la taille ne sont pas considérés comme portés. Nous nous gardons le droit de refuser tout échange sur des produits que nous ne considérerons pas conformes à notre règlement.</em></p>
+<p class="p1"><strong><span class="s1">1- I WANT TO EXCHANGE A PRODUCT, WHAT TO DO?</span></strong></p>
+<p class="p1"><span class="s1">If you want to exchange a product, you will have to send it back to us (unworn, uncleaned, in its original box) in the <strong>same</strong> <strong>quality</strong>.<br>Please note that the cost of shipping will be at your expense.<br></span></p>
+<p class="p1"><span class="s1">Once the package has been sent, wait 5 to 7 days to receive the package from Lpc.shop. Your new product will be sent to you free within 48 hours after receipt of the item.</span></p>
+<p class="p1"><span class="s1"> If it is a refund, count 48h to 72h after receipt of the package to be re-credited. You will be refunded on the same payment method.</span></p>
+<p class="p1"><em>* Clothes that have been threaded to try the size are not considered worn. We keep the right to refuse any exchange on products that we do not consider compliant with our regulations.</em></p>
 <p class="p1"> </p>
 
 <div class="spacer1"></div>
-<h2 class="p1"><strong><span class="s1">À Propos de Lpc.shop</span></strong></h2>
+<h2 class="p1"><strong><span class="s1">About Lpc.shop</span></strong></h2>
 <div class="spacer2"></div>
 
-<p class="p1"><strong><span class="s1">1- Où Lpc.shop trouve ses produits ?</span></strong></p>
-<p class="p1"><span class="s1">Nos produits viennent des boutiques et revendeurs officiels, d'anciens collectionneurs ou alors de particulier. Ce sont des produits 100% authentic et vérifié par notre équipe d'experte.</span></p>
-<p class="p1"><strong><span class="s1">2- Les produits vendus sur Lpc.shop ont-ils déjà été portés ?</span></strong></p>
-<p class="p1"><span class="s1">Dans la majorité des cas, les produits sont dans un état neuf encore étiqueté, cependant, nous vendons quelques produits ayant déjà été porté ou utilisé mais dans ce cas, cela sera précisé dans l'annonce. </span></p>
-<p class="p1"><strong><span class="s1">3- Vous souhaitez nous vendre ou proposer des produits pour notre site ? Voici la démarche :</span></strong></p>
-<p class="p1"><span class="s1">Si vous êtes propriétaire de différents produits et que vous souhaitez écouler votre collection, merci de </span><span class="s1"><a href="http://www.lpcshop.fr/contact.html">nous contacter</a> par e-mail avec une liste mentionnant le nom du produit, la couleur du produit, l'état du produit et la taille du produit</span>.</p>
+<p class="p1"><strong><span class="s1">1- Where does Lpc.shop find its products?</span></strong></p>
+<p class="p1"><span class="s1">Our products come from official shops and retailers, former collectors or even private individuals. These are 100% authentic products and verified by our expert team.</span></p>
+<p class="p1"><strong><span class="s1">2- Have the products sold on Lpc.shop already been worn?</span></strong></p>
+<p class="p1"><span class="s1">In the majority of cases, the products are in a new condition still labeled, however, we sell some products that have already been worn or used but in this case, this will be specified in the ad. </span></p>
+<p class="p1"><strong><span class="s1">3- Do you want to sell us or offer products for our site? Here is the approach:</span></strong></p>
+<p class="p1"><span class="s1">If you own different products and want to sell your collection, please</span><span class="s1"><a href="http://www.lpcshop.fr/contact.html">contact us</a> pby e-mail with a list mentioning the product name, product color, product status and product size</span>.</p>
       </div>
     </div>
   </div>
