--- a/mentionlegaleanglais.html
+++ b/mentionlegaleanglais.html
@@ -82,7 +82,7 @@
       <div class="rte">
         <meta charset="utf-8">
         <div class ="container text-center">
-<p class="p1"><span class="s1">﻿Here is a series of frequent questions that users ask us by e-mail. If your question is not located here or if you want more information, do not hesitate to<a href="http://www.lpcshop.fr/contactanglais.html" target="_blank" rel="noopener noreferrer">contact us</a> by e-mail.</span></p>
+<p class="p1"><span class="s1">﻿Here is a series of frequent questions that users ask us by e-mail. If your question is not located here or if you want more information, do not hesitate to </span><span class="s1"><a href="http://www.lpcshop.fr/contactanglais.html"> contact us </a> by e-mail.</span></p>
  
 <img alt="Brand" src="Images/site/logo3.png">
 <h2 class="p1"><strong><span class="s1">ORDER</span></strong></h2>
@@ -150,7 +150,7 @@
 <p class="p1"><strong><span class="s1">2- Have the products sold on Lpc.shop already been worn?</span></strong></p>
 <p class="p1"><span class="s1">In the majority of cases, the products are in a new condition still labeled, however, we sell some products that have already been worn or used but in this case, this will be specified in the ad. </span></p>
 <p class="p1"><strong><span class="s1">3- Do you want to sell us or offer products for our site? Here is the approach:</span></strong></p>
-<p class="p1"><span class="s1">If you own different products and want to sell your collection, please</span><span class="s1"><a href="http://www.lpcshop.fr/contact.html">contact us</a> pby e-mail with a list mentioning the product name, product color, product status and product size</span>.</p>
+<p class="p1"><span class="s1">If you own different products and want to sell your collection, please</span><span class="s1"><a href="http://www.lpcshop.fr/contactanglais.html"> contact us </a> by e-mail with a list mentioning the product name, product color, product status and product size</span>.</p>
       </div>
     </div>
   </div>
