--- a/indexanglais.html
+++ b/indexanglais.html
@@ -82,6 +82,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right" data-target ="#orderForm">
+            <a href="index.html"><img src="Images/site/francais.png" alt= "nom de ton image" id ="picture2"></a>
 
             <li><a href="contactanglais.html">Meet up</a></li>
             </ul>
