--- a/shop.html
+++ b/shop.html
@@ -566,6 +566,13 @@
       <img src="Images/background/su.png" alt="Bande supreme">  
       </div>
 
+  <div class="spacer1"></div>
+
+
+
+     
+
+
 
 
 
