--- a/shop.html
+++ b/shop.html
@@ -554,9 +554,7 @@
     <div class="spacer1"></div>
 
 
-
-
-
+        <div class = "fullwidth displayflex">
 
         <div class="text-center fullwidth">
         <img src="Images/background/su.png" alt="Bande supreme"> 
@@ -565,8 +563,9 @@
       <img src="Images/background/su.png" alt="Bande supreme"> 
       <img src="Images/background/su.png" alt="Bande supreme">  
       </div>
+      </div>
 
-  <div class="spacer1"></div>
+      <div class="spacer1"></div>
 
 
 
@@ -733,7 +732,7 @@
 
 
 
-
+<div class = "fullwidth displayflex">
 
         <div class="text-center fullwidth">
         <img src="Images/background/su.png" alt="Bande supreme"> 
@@ -742,7 +741,7 @@
       <img src="Images/background/su.png" alt="Bande supreme"> 
       <img src="Images/background/su.png" alt="Bande supreme"> 
       </div> 
-
+</div>
 
 
    <div class="spacer1"></div>
@@ -1032,7 +1031,7 @@
 
 
 
-
+<div class = "fullwidth displayflex">
 
         <div class="text-center fullwidth">
         <img src="Images/background/su.png" alt="Bande supreme"> 
@@ -1042,7 +1041,7 @@
       <img src="Images/background/su.png" alt="Bande supreme">
       </div>
 
-
+</div>
 
 
 
@@ -2382,7 +2381,7 @@
 
 
 
-
+<div class = "fullwidth displayflex">
 
 
         <div class="text-center fullwidth">
@@ -2392,7 +2391,7 @@
       <img src="Images/background/su.png" alt="Bande supreme"> 
       <img src="Images/background/su.png" alt="Bande supreme">  
       </div>
-
+</div>
 
 
 
@@ -3181,7 +3180,7 @@
 
 
 
-
+<div class = "fullwidth displayflex">
 
         <div class="text-center fullwidth">
         <img src="Images/background/sneaker1.png" alt="Bande supreme"> 
@@ -3190,7 +3189,7 @@
       <img src="Images/background/sneaker1.png" alt="Bande supreme"> 
       <img src="Images/background/sneaker1.png" alt="Bande supreme">  
       </div>
-
+</div>
 
 
    <div class="spacer1"></div>
