--- a/indexanglais.html
+++ b/indexanglais.html
@@ -68,7 +68,7 @@
 
           <ul class="nav navbar-nav navbar-right" data-target ="#orderForm">
              
-            <a href="indexanglais.html"><img src="Images/site/francais.png" alt= "nom de ton image" id ="picture2"></a>
+            <a href="index.html"><img src="Images/site/francais.png" alt= "nom de ton image" id ="picture2"></a>
 
             <li><a href="contact.html">Meet up</a></li>
             </ul>
