--- a/indexanglais.html
+++ b/indexanglais.html
@@ -242,7 +242,7 @@
           </div>
         </div>
    
-        <div class="spacer1"></div>
+        <div class="spacer1-dynamique"></div>
         
 
 <div id="footer">
