--- a/shopanglais.html
+++ b/shopanglais.html
@@ -62,7 +62,7 @@
         </div>
           
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div class="collapse navbar-collapse align-right" id="bs-example-navbar-collapse-1">
           
                       <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post" >
 
@@ -95,7 +95,7 @@
 
    
 
-<div class="spacer"></div>
+<div class="spacer-static"></div>
 
 
 
