--- a/shopanglais.html
+++ b/shopanglais.html
@@ -573,7 +573,7 @@
 
 
 
-      <div class ="container  displayflex ">
+      <div class = "fullwidth displayflex">
         <div class="text-center fullwidth">
         <img src="Images/background/su.png" alt="Bande supreme"> 
         <img src="Images/background/su.png" alt="Bande supreme"> 
@@ -745,7 +745,7 @@
 
 
 
-      <div class ="container  displayflex ">
+      <div class = "fullwidth displayflex">
         <div class="text-center fullwidth">
         <img src="Images/background/su.png" alt="Bande supreme"> 
         <img src="Images/background/su.png" alt="Bande supreme"> 
@@ -1046,7 +1046,7 @@
 
 
 
-      <div class ="container  displayflex ">
+      <div class = "fullwidth displayflex">
         <div class="text-center fullwidth">
         <img src="Images/background/su.png" alt="Bande supreme"> 
         <img src="Images/background/su.png" alt="Bande supreme"> 
@@ -2397,7 +2397,7 @@
 
 
 
-       <div class ="container  displayflex ">
+       <div class = "fullwidth displayflex">
         <div class="text-center fullwidth">
         <img src="Images/background/su.png" alt="Bande supreme"> 
         <img src="Images/background/su.png" alt="Bande supreme"> 
@@ -3197,7 +3197,7 @@
 
 
 
-       <div class ="container  displayflex ">
+       <div class = "fullwidth displayflex">
         <div class="text-center fullwidth">
         <img src="Images/background/sneaker1.png" alt="Bande supreme"> 
         <img src="Images/background/sneaker1.png" alt="Bande supreme"> 
